se crea servicios de user

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
-
+server.port=8182
+spring.datasource.url=jdbc:postgresql://localhost:5433/ventas_libres
+spring.datasource.username=postgres
+spring.datasource.password=2220718
+spring.datasoruce.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.drive-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
